--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         "component": "views/home",
         "props": {
           "errors": {},
-          "name": "Github WusThanhDieu",
+          "name": "TungDuong",
           "quote": {
             "message": "",
             "author": ""
@@ -64,9 +64,9 @@
             "fontName": "Mali",
             "color": "#ff0019",
             "messages": [
-              "Github WusThanhDieu",
-              "Test 1",
-              "Test 2"
+              "Le Tung Duong",
+              "tduong_666",
+              "duong"
             ],
             "music": "//thanhdieu.com/music.mp3"
           },
